--- a/templates/upload_video.html
+++ b/templates/upload_video.html
@@ -8,7 +8,7 @@
   <!-- Available Models Select Field -->
 
   
-  {{ form.video_file.label }}: {{ form.video_file }}
+  {{ form.video_file }}
   {{ form.submit }}
 </form>
 {% endblock %}
